# lucky_labs_test_task

./: .gitignore  CMakeLists.txt
bombs/: CMakeLists.txt  bombs.cc  bombs.h  main.cc
sea-battle/: CMakeLists.txt  battleship.h
